styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
}

html {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

/* Scroll margin top header */
@layer components {
  *:is(h1, h2, h3, h4, h5, h6) {
    @apply scroll-mt-28;
  }
}

/* START: CSS Prose */
.prose .katex-html {
  white-space: wrap;
}
.prose {
  font-size: 18px;
  word-break: break-word;
  hyphens: auto;
  text-align: justify;
  /* letter-spacing: -0.025em; */
}

.prose h2 {
  font-size: 28px;
}

.prose h3 {
  font-size: 24px;
}

.prose img {
  margin: 0 auto;
  border-radius: 12px;
}

.prose blockquote {
  background: #5c6370;
}
/* END: CSS Prose */

/* START: Code line counter*/
code {
  counter-reset: line;
}

code > [data-line]::before {
  counter-increment: line;
  content: counter(line);

  /* Other styling */
  display: inline-block;
  width: 1rem;
  margin-right: 2rem;
  text-align: right;
  color: gray;
}

code[data-line-numbers-max-digits="2"] > [data-line]::before {
  width: 2rem;
}

code[data-line-numbers-max-digits="3"] > [data-line]::before {
  width: 3rem;
}
/* END: Code line counter*/

/* START: Auto link header icon */
h1 .anchor,
h2 .anchor,
h3 .anchor,
h4 .anchor,
h5 .anchor,
h6 .anchor {
  margin: -0.125rem !important;
  margin-left: 0.2ch !important;
  padding: 0.125rem !important;
  user-select: none !important;
  opacity: 0 !important;
  text-decoration: none !important;
}
h1 .anchor .anchor-icon,
h2 .anchor .anchor-icon,
h3 .anchor .anchor-icon,
h4 .anchor .anchor-icon,
h5 .anchor .anchor-icon,
h6 .anchor .anchor-icon {
  margin-left: 0.45ch !important;
  margin-right: 0.45ch !important;
}
h1:hover .anchor,
h2:hover .anchor,
h3:hover .anchor,
h4:hover .anchor,
h5:hover .anchor,
h6:hover .anchor {
  opacity: 1 !important;
}
/* END: Auto link header icon */


/* custom scrollbar */
::-webkit-scrollbar {
  width: 20px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: #d6dee1;
  border-radius: 20px;
  border: 6px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #a8bbbf;
}

